--- a/anime/Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala.html
+++ b/anime/Kesari_Chapter_2_The_Untold_Story_Of_Jallianwala.html
@@ -20,8 +20,6 @@
       cursor: move;
       transition: opacity 0.5s ease;
     }
-    .ad-slot { display: none; }
-    .ad-slot.active { display: block; }
     #closeAd {
       position: absolute;
       top: 6px;
@@ -33,10 +31,6 @@
       line-height: 1;
       cursor: pointer;
     }
-    @media (max-width: 640px) {
-      #adBox { bottom: 1rem; right: 1rem; }
-    }
-    /* Bottom Ad Styling */
     .bottom-ads {
       margin-top: 30px;
       padding: 20px;
@@ -44,17 +38,13 @@
       border-top: 2px solid #0f0;
       text-align: center;
     }
-    .bottom-ads iframe {
+    .bottom-ads img {
       width: 100%;
       max-width: 728px;
       height: 90px;
+      object-fit: cover;
       margin: 10px auto;
       display: block;
-    }
-    .bottom-ads h2 {
-      font-size: 1.5rem;
-      color: #0f0;
-      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -81,45 +71,14 @@
     <!-- Bottom Ads Section -->
     <div class="bottom-ads">
       <h2>Support Us</h2>
-
-      <!-- First banner ad -->
-      <div>
-        <script async="async" data-cfasync="false" src="//pl26487204.profitableratecpm.com/9c8a5fd343f0c339fdb71a4da43f3a35/invoke.js"></script>
-        <div id="container-9c8a5fd343f0c339fdb71a4da43f3a35"></div>
-      </div>
-
-      <!-- Second ad -->
-      <iframe src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a" frameborder="0" scrolling="no" allowfullscreen></iframe>
-
+      <img id="bottomBanner" src="https://via.placeholder.com/728x90.png?text=Ad+Banner+1" alt="Advertisement" />
     </div>
-
   </div>
 
   <!-- Floating Ad Box -->
   <div id="adBox">
     <button id="closeAd" aria-label="Close ad">×</button>
-    <div class="ad-slot active" id="ad1">
-      <iframe
-        src="https://www.profitableratecpm.com/n7eqkd8462?key=d1bf84aaada8c239b6538b9e4ff2781a"
-        width="100%"
-        height="90"
-        frameborder="0"
-        scrolling="no"
-        allowfullscreen>
-      </iframe>
-    </div>
-    <div class="ad-slot" id="ad2">
-      <script type="text/javascript">
-        atOptions = {
-          'key': '38c97041ba09133421880a5339a162a8',
-          'format': 'iframe',
-          'height': 90,
-          'width': 728,
-          'params': {}
-        };
-      </script>
-      <script src="//www.highperformanceformat.com/38c97041ba09133421880a5339a162a8/invoke.js"></script>
-    </div>
+    <img id="floatingBanner" src="https://via.placeholder.com/728x90.png?text=Floating+Ad+1" alt="Floating Ad" />
   </div>
 
   <script type="text/javascript">
@@ -153,15 +112,34 @@
       list.appendChild(btn);
     });
 
-    // Rotate ads
-    let currentAd = 1;
-    setInterval(() => {
-      document.querySelectorAll('.ad-slot').forEach(el => el.classList.remove('active'));
-      currentAd = currentAd === 1 ? 2 : 1;
-      document.getElementById(`ad${currentAd}`).classList.add('active');
-    }, 10000);
+    // Ad Banner Images
+    const bannerImages = [
+      "https://via.placeholder.com/728x90.png?text=Ad+Banner+1",
+      "https://via.placeholder.com/728x90.png?text=Ad+Banner+2",
+      "https://via.placeholder.com/728x90.png?text=Ad+Banner+3",
+      "https://via.placeholder.com/728x90.png?text=Ad+Banner+4"
+    ];
 
-    // Draggable Ad Box
+    const floatingImages = [
+      "https://via.placeholder.com/728x90.png?text=Floating+Ad+1",
+      "https://via.placeholder.com/728x90.png?text=Floating+Ad+2",
+      "https://via.placeholder.com/728x90.png?text=Floating+Ad+3"
+    ];
+
+    let bannerIndex = 0;
+    let floatingIndex = 0;
+
+    setInterval(() => {
+      // Rotate Bottom Banner
+      bannerIndex = (bannerIndex + 1) % bannerImages.length;
+      document.getElementById('bottomBanner').src = bannerImages[bannerIndex] + '&t=' + new Date().getTime(); // Force reload with timestamp
+
+      // Rotate Floating Banner
+      floatingIndex = (floatingIndex + 1) % floatingImages.length;
+      document.getElementById('floatingBanner').src = floatingImages[floatingIndex] + '&t=' + new Date().getTime();
+    }, 6000); // Every 6 seconds
+
+    // Draggable Floating Ad
     (function() {
       const box = document.getElementById('adBox');
       let offsetX, offsetY, dragging = false;
@@ -184,10 +162,11 @@
       });
     })();
 
-    // Close floating ad
+    // Close Floating Ad
     document.getElementById('closeAd').addEventListener('click', () => {
       document.getElementById('adBox').style.display = 'none';
     });
+
   </script>
 
 </body>
